--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,7 +65,7 @@
     ],
     "import/no-extraneous-dependencies": [
       "error",
-      { "devDependencies": ["**/*.spec.js"] }
+      { "devDependencies": ["**/*.spec.ts", "jest.config.ts"] }
     ]
   },
   "settings": {
